Update hyprland and waybar styles

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -92,7 +92,8 @@ misc {
   focus_on_activate = false
 }
 
-windowrule = tile, class:^(Brave)$
+windowrule = opacity 1 0.97, class:^(brave-browser)$
+windowrule = tile, class:^(brave-browser)$
 
 # Extra autostart processes
 # exec-once = dropbox-cli start
