--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -71,6 +71,16 @@ bind = $mainMod SHIFT, 7, movetoworkspacesilent, 7
 bind = $mainMod SHIFT, 8, movetoworkspacesilent, 8
 bind = $mainMod SHIFT, 9, movetoworkspacesilent, 9
 
+bindm = $mainMod, mouse:272, movewindow
+bindm = $mainMod, mouse:273, resizewindow
+
+# Disable/reenable keybinds
+bind = ALT SUPER CTRL, L, submap, clean
+submap = clean
+bind = ALT SUPER CTRL, L, submap, reset
+submap = reset
+
+
 animations {
   bezier = linear,0,0,1,1
   animation = windows, 0, 0, ease
@@ -90,10 +100,13 @@ master {
 
 misc {
   focus_on_activate = false
+  new_window_takes_over_fullscreen = 1
 }
 
 windowrule = opacity 1 0.97, class:^(brave-browser)$
 windowrule = tile, class:^(brave-browser)$
+windowrule = float, class:xdg-desktop-portal-gtk
+windowrule = center, class:xdg-desktop-portal-gtk
 
 # Extra autostart processes
 # exec-once = dropbox-cli start
