update waybar and hypr

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -10,7 +10,6 @@ source = ~/.config/hypr/monitors.conf
 # Use defaults Omarchy defaults
 source = ~/.local/share/omarchy/default/hypr/autostart.conf
 source = ~/.local/share/omarchy/default/hypr/bindings/media.conf
-source = ~/.local/share/omarchy/default/hypr/bindings/tiling.conf
 source = ~/.local/share/omarchy/default/hypr/bindings/utilities.conf
 source = ~/.local/share/omarchy/default/hypr/envs.conf
 source = ~/.local/share/omarchy/default/hypr/looknfeel.conf
@@ -29,7 +28,8 @@ $mainMod = ALT
 
 # Core binds
 bind = $mainMod, p, exec, walker
-bind = $mainMod, Q, exec, ~/.local/share/omarchy/bin/omarchy-menu-power
+bind = $mainMod SHIFT, p, exec, omarchy-menu
+bind = $mainMod, Q, exec, ~/.local/share/omarchy/bin/omarchy-menu system
 bind = $mainMod, B, exec, pkill -SIGUSR1 waybar
 bind = $mainMod SHIFT, C, killactive
 
@@ -41,8 +41,8 @@ bind = $mainMod, period, layoutmsg, removemaster
 
 bind = $mainMod, L, splitratio, +0.05
 bind = $mainMod, H, splitratio, -0.05
+bind = $mainMod, t, togglefloating
 bind = $mainMod SHIFT, space, splitratio, exact 0.5
-
 
 bind = $mainMod, e, focusmonitor, 1
 bind = $mainMod, w, focusmonitor, 0
@@ -107,6 +107,10 @@ windowrule = opacity 1 0.97, class:^(brave-browser)$
 windowrule = tile, class:^(brave-browser)$
 windowrule = float, class:xdg-desktop-portal-gtk
 windowrule = center, class:xdg-desktop-portal-gtk
+
+windowrule = float, class:^(org.pulseaudio.pavucontrol)$
+windowrule = center, class:^(org.pulseaudio.pavucontrol)$
+windowrule = size 800 800, class:^(org.pulseaudio.pavucontrol)$
 
 # Extra autostart processes
 # exec-once = dropbox-cli start
