--- a/config/waybar/config.jsonc
+++ b/config/waybar/config.jsonc
@@ -1,4 +1,5 @@
 {
+  "include": "./priv.jsonc",
   "reload_style_on_change": true,
   "output": "DP-1",
   "layer": "top",
@@ -12,7 +13,10 @@
     "hyprland/window"
   ],
   "modules-right": [
+    "custom/update",
     "clock",
+    "custom/priv1",
+    "custom/priv2",
     "custom/idle",
     "bluetooth",
     "network",
@@ -57,16 +61,43 @@
     "on-click": "alacritty -e btop"
   },
   "clock": {
-    "format": "{:%A %H:%M}",
+    "format": "{:%a %b %d %Y %H:%M:%S}",
+    "interval": 1,
     "format-alt": "{:%d %B W%V %Y}",
-    "tooltip": false
+    "tooltip-format": "<tt><small>{calendar}</small></tt>",
+    "calendar": {
+      "mode": "year",
+      "mode-mon-col": 3,
+      "weeks-pos": "right",
+      "on-scroll": 1,
+      "format": {
+        "months": "<span color='#b58900'><b>{}</b></span>",
+        "days": "<span color='#839496'><b>{}</b></span>",
+        "weeks": "<span color='#2aa198'><b>W{}</b></span>",
+        "weekdays": "<span color='#268bd2'><b>{}</b></span>",
+        "today": "<span color='#dc322f'><b><u>{}</u></b></span>"
+      }
+    },
+    "actions": {
+      "on-click-right": "mode",
+      "on-scroll-up": "tz_up",
+      "on-scroll-down": "tz_down",
+      "on-scroll-up": "shift_up",
+      "on-scroll-down": "shift_down"
+    }
   },
   "network": {
-    "format-icons": ["󰤯","󰤟","󰤢","󰤥","󰤨"],
-    "format" : "{icon}",
-    "format-wifi" : "{icon}",
-    "format-ethernet" : "󰀂",
-    "format-disconnected" : "󰖪",
+    "format-icons": [
+      "󰤯",
+      "󰤟",
+      "󰤢",
+      "󰤥",
+      "󰤨"
+    ],
+    "format": "{icon}",
+    "format-wifi": "{icon}",
+    "format-ethernet": "󰀂",
+    "format-disconnected": "󰖪",
     "tooltip-format-wifi": "{essid} ({frequency} GHz)\n⇣{bandwidthDownBytes}  ⇡{bandwidthUpBytes}",
     "tooltip-format-ethernet": "⇣{bandwidthDownBytes}  ⇡{bandwidthUpBytes}",
     "tooltip-format-disconnected": "Disconnected",
@@ -77,14 +108,32 @@
   "battery": {
     "format": "{capacity}% {icon}",
     "format-discharging": "{icon}",
-    "format-charging":    "{icon}",
-    "format-plugged":     "",
+    "format-charging": "{icon}",
+    "format-plugged": "",
     "format-icons": {
       "charging": [
-        "󰢜", "󰂆", "󰂇", "󰂈", "󰢝", "󰂉", "󰢞", "󰂊", "󰂋", "󰂅"
+        "󰢜",
+        "󰂆",
+        "󰂇",
+        "󰂈",
+        "󰢝",
+        "󰂉",
+        "󰢞",
+        "󰂊",
+        "󰂋",
+        "󰂅"
       ],
       "default": [
-        "󰁺", "󰁻", "󰁼", "󰁽", "󰁾", "󰁿", "󰂀", "󰂁", "󰂂", "󰁹"
+        "󰁺",
+        "󰁻",
+        "󰁼",
+        "󰁽",
+        "󰁾",
+        "󰁿",
+        "󰂀",
+        "󰂁",
+        "󰂂",
+        "󰁹"
       ]
     },
     "format-full": "󰂅",
@@ -96,12 +145,6 @@
       "critical": 10
     }
   },
-  "custom/idle": {
-    "format": "{text}",
-    "signal": 8,
-    "on-click": "~/.local/share/omarchy/bin/omarchy-toggle-idle",
-    "exec": "if pgrep -x hypridle >/dev/null; then echo '󰒲'; else echo '󰒳'; fi"
-  },
   "bluetooth": {
     "format": "",
     "format-disabled": "󰂲",
@@ -111,32 +154,34 @@
   },
   "pulseaudio": {
     "format": "{icon}",
-    "on-click": "alacritty --class=Wiremix -e wiremix",
+    "on-click": "pavucontrol",
     "on-click-right": "pamixer -t",
     "tooltip-format": "Playing at {volume}%",
     "scroll-step": 5,
     "format-muted": "󰝟",
     "format-icons": {
-      "default": ["", "", ""]
+      "default": [
+        "",
+        "",
+        ""
+      ]
     }
-  },
-  "group/tray-expander": {
-    "orientation": "inherit",
-    "drawer": {
-      "transition-duration": 600,
-      "children-class": "tray-group-item"
-    },
-    "modules": [
-      "custom/expand-icon",
-    "tray"
-    ]
-  },
-  "custom/expand-icon": {
-    "format": " ",
-    "tooltip": false
   },
   "tray": {
     "icon-size": 12,
-    "spacing": 12,
-  }
+    "spacing": 12
+  },
+  "custom/idle": {
+    "format": "{text}",
+    "signal": 8,
+    "on-click": "~/.local/share/omarchy/bin/omarchy-toggle-idle",
+    "exec": "if pgrep -x hypridle >/dev/null; then echo '󰒲'; else echo '󰒳'; fi"
+  },
+  "custom/update": {
+    "format": "",
+    "exec": "omarchy-update-available",
+    "on-click": "alacritty --class Omarchy --title Omarchy -e omarchy-update",
+    "tooltip-format": "Omarchy update available",
+    "interval": 3600
+  },
 }
